force-app/main/default/objects/SPA_Reg_Codes__mdt/SPA_Reg_Codes__mdt.object-meta.xml
<CustomObject>
    <label>SPA Reg Code</label>
    <pluralLabel>SPA Reg Codes</pluralLabel>
</CustomObject>