force-app/main/default/objects/SPA_Reg_Codes__mdt/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <label>Programs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BH</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
                <default>true</default>
                <label>DM</label>
            </value>
            <value>
                <fullName>DM + BH</fullName>
            </value>
            <value>
                <fullName>DM + DPP</fullName>
            </value>
            <value>
                <fullName>DM + DPP + HTN</fullName>
            </value>
            <value>
                <fullName>DM + DPP + HTN + WM + BH</fullName>
            </value>
            <value>
                <fullName>DM + HTN</fullName>
            </value>
            <value>
                <fullName>DPP</fullName>
            </value>
            <value>
                <fullName>HTN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>