force-app/main/default/objects/SPA_Reg_Codes__mdt/fields/Registration_Code_ID__c.field-meta.xml
<CustomField>
    <fullName>Registration_Code_ID__c</fullName>
    <label>Registration Code ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>