force-app/main/default/objects/SPA_Reg_Codes__mdt/fields/SPA_CMC_Prefix__c.field-meta.xml
<CustomField>
    <fullName>SPA_CMC_Prefix__c</fullName>
    <label>SPA CMC Prefix</label>
    <referenceTo>SPA_CMC_Prefix__mdt</referenceTo>
    <relationshipLabel>SPA Reg Codes</relationshipLabel>
    <relationshipName>SPA_Reg_Codes</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>