force-app/main/default/objects/SPA_Reg_Codes__mdt/listViews/SPA_Reg_Code_View.listView-meta.xml
<ListView>
    <fullName>SPA_Reg_Code_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Programs__c</columns>
    <columns>SPA_CMC_Prefix__c</columns>
    <columns>Registration_Code_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>SPA Reg Code View</label>
    <language>en_US</language>
</ListView>